--- a/Experiment1/index.html
+++ b/Experiment1/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <h2 style="text-align: center; font-weight: bold; margin-bottom: 20px;">
+    Products List
+  </h2>
   <div id="root"></div>
 
   <!-- React and ReactDOM CDN -->
