--- a/Experiment1/index.html
+++ b/Experiment1/index.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React Product Cards</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  
-  <h2 style="text-align: center; font-weight: bold; margin-bottom: 20px;">
-    Products List
-  </h2>
-  <div id="root"></div>
-
-  <!-- React and ReactDOM CDN -->
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-  <!-- Babel for JSX transpiling -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-  <!-- Your React code -->
-  <script type="text/babel" src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product List </title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/index.jsx"></script>
+  </body>
 </html>
